--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         --bg-color: #0b0c10;
         --text-color: #ffffff;
         --gray: #9ca3af;
-        --accent: #338eda;
       }
     }
 
@@ -74,9 +73,9 @@
       min-height: 100vh;
       align-items: center;
       justify-content: center;
-      padding: 2rem;
-      overflow-x: hidden;
+      padding: clamp(1rem, 4vw, 2rem);
       transition: background-color 0.3s ease, color 0.3s ease;
+      overflow-x: hidden;
     }
 
     .container {
@@ -85,6 +84,7 @@
       text-align: center;
       animation: fadeIn 0.8s ease-in-out;
       transition: transform 0.2s ease-in-out;
+      padding-inline: 1rem;
     }
 
     .container:hover {
@@ -103,7 +103,7 @@
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: clamp(1.75rem, 5vw, 2.5rem);
       color: var(--red);
       margin-bottom: 0.5rem;
       background: linear-gradient(90deg, var(--red), var(--accent));
@@ -118,7 +118,7 @@
     }
 
     p.tagline {
-      font-size: 1.1rem;
+      font-size: clamp(1rem, 3.5vw, 1.2rem);
       color: var(--gray);
       margin-bottom: 2rem;
     }
@@ -170,6 +170,18 @@
       height: 24px;
     }
 
+    a {
+      color: var(--accent);
+      text-decoration: underline;
+      text-underline-position: under;
+      transition: text-decoration-style 0.2s ease;
+    }
+
+    a:hover,
+    a:focus {
+      text-decoration-style: wavy;
+    }
+
     #faq-modal {
       display: none;
       position: fixed;
@@ -181,14 +193,15 @@
       z-index: 9999;
       align-items: center;
       justify-content: center;
+      padding: 1rem;
     }
 
     #faq-modal .content {
       background: var(--bg-color);
       color: var(--text-color);
       max-width: 600px;
-      width: 90%;
-      padding: 2rem;
+      width: 100%;
+      padding: 1.5rem;
       border-radius: var(--radius);
       overflow-y: auto;
       max-height: 90vh;
@@ -200,7 +213,7 @@
       background-color: var(--red);
       color: white;
       padding: 1rem;
-      margin: 0.75rem 0;
+      margin: 1rem 0 0 0;
       border: none;
       border-radius: var(--radius);
       font-size: 1rem;
@@ -209,7 +222,6 @@
       transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.3s ease;
       font-family: inherit;
       cursor: pointer;
-      text-align: center;
       width: 100%;
     }
 
@@ -223,21 +235,71 @@
       transform: scale(0.98);
     }
 
-    a {
-      color: var(--accent);
-      text-decoration: underline;
-      text-underline-position: under;
-      transition: text-decoration-style 0.2s ease;
+    @media (max-width: 480px) {
+      .link-button {
+        font-size: 0.95rem;
+        padding: 0.85rem;
+      }
+
+      #theme-toggle {
+        top: 8px;
+        right: 8px;
+      }
+
+      .faq-close-btn {
+        font-size: 0.95rem;
+      }
+
+      a[href*="flag-orpheus-top.svg"] img {
+        width: 180px !important;
+        top: 5px !important;
+      }
     }
 
-    a:focus,
-    a:hover {
-      text-decoration-style: wavy;
+    #flag-link {
+      position: absolute;
+      top: 0;
+      left: 10px;
+      z-index: 999;
     }
 
-    @media (max-width: 600px) {
-      h1 { font-size: 1.75rem; }
-      .link-button { padding: 0.9rem; font-size: 0.95rem; }
+    #flag-link img {
+      width: 220px;
+      max-width: 90vw;
+      height: auto;
+      border: 0;
+    }
+
+    /* Default: float top-left (for desktops) */
+    #flag-link {
+      position: absolute;
+      top: 0;
+      left: 10px;
+      z-index: 999;
+    }
+
+    #flag-link img {
+      width: 220px;
+      max-width: 90vw;
+      height: auto;
+      border: 0;
+    }
+
+    /* Mobile and Tablet: show inline above content */
+    @media (max-width: 900px) {
+    #flag-link {
+      position: relative;
+      display: block;
+      margin-bottom: 1.25rem;
+      top: auto;
+      left: auto;
+      text-align: center;
+    }
+
+    #flag-link img {
+      width: 160px;
+      margin: 0 auto;
+    }
     }
   </style>
 </head>
@@ -249,9 +311,10 @@
   </button>
 
   <!-- Hack Club Flag -->
-  <a href="https://hackclub.com/" target="_blank">
-    <img style="position: absolute; top: 0; left: 10px; border: 0; width: 256px; z-index: 999;" src="https://assets.hackclub.com/flag-orpheus-top.svg" alt="Hack Club logo" />
+  <a href="https://hackclub.com/" target="_blank" id="flag-link">
+    <img src="https://assets.hackclub.com/flag-orpheus-top.svg" alt="Hack Club logo" />
   </a>
+
 
   <div class="container">
     <h1>HackClub @ Binus School Semarang</h1>
