--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HackClub @ Binus School Semarang</title>
 
-  <!-- SEO, OG, and Twitter Meta -->
-  <meta name="description" content="HackClub @ Binus School Semarang is a student-led coding and innovation club where makers build, learn, and connect." />
-  <meta name="keywords" content="HackClub, Binus School Semarang, coding club, student tech club, programming, makerspace, STEM, innovation, Indonesia, student leadership, hack club" />
-  <meta name="author" content="Rainier Pearson Saputra" />
-  <link rel="canonical" href="https://yourdomain.com/" />
-  <meta property="og:title" content="HackClub @ Binus School Semarang" />
-  <meta property="og:description" content="Join our coding and makers club at Binus School Semarang! Build, create, and connect through tech." />
-  <meta property="og:image" content="https://assets.hackclub.com/flag-orpheus-top.svg" />
-  <meta property="og:url" content="https://yourdomain.com/" />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="HackClub @ Binus School Semarang" />
-  <meta name="twitter:description" content="Join our student-led tech and innovation club at Binus School Semarang." />
-  <meta name="twitter:image" content="https://assets.hackclub.com/flag-orpheus-top.svg" />
+  <!-- SEO Meta Tags -->
+  <title>HackClub @ Binus School Semarang</title>
+  <meta name="title" content="HackClub @ Binus School Semarang">
+  <meta name="description" content="HackClub @ Binus School Semarang is a student-led coding and innovation club where makers build, learn, and connect.">
+  <meta name="keywords" content="HackClub, Binus School Semarang, coding club, student tech club, programming, makerspace, STEM, innovation, Indonesia, student leadership, hack club">
+  <meta name="author" content="Rainier Pearson Saputra">
 
-  <link rel="icon" href="https://assets.hackclub.com/icon-rounded.svg" type="image/svg+xml" />
-  <meta name="theme-color" content="#ec3750" />
+  <!-- Favicon and Theme -->
+  <link rel="icon" href="https://assets.hackclub.com/icon-rounded.svg" type="image/svg+xml">
+  <meta name="theme-color" content="#ec3750">
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+
 
   <style>
     :root {
