--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
     <a data-link="register" class="link-button" target="_blank">Register for HackClub</a>
     <a href="https://hackclub.com" class="link-button" target="_blank">What is Hack Club?</a>
-    <a href="https://instagram.com/starthackclub" class="link-button" target="_blank">Follow on Instagram</a>
+    <a href="https://instagram.com/hackclub.bss" class="link-button" target="_blank">Follow on Instagram</a>
     <a data-link="email" class="link-button">Contact Club Leader</a>
     <a href="#" class="link-button" style="opacity: 0.6; pointer-events: none;">Meeting Info – To be announced soon</a>
     <a href="#" class="link-button" id="faq-button">FAQ – About Our Club</a>
