--- a/index.html
+++ b/index.html
@@ -20,282 +20,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 
-
-  <style>
-    :root {
-      --red: #ec3750;
-      --red-hover: #ff476f;
-      --radius: 12px;
-      --bg-color: #ffffff;
-      --text-color: #000000;
-      --gray: #4b5563;
-      --accent: #338eda;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg-color: #0b0c10;
-        --text-color: #ffffff;
-        --gray: #9ca3af;
-      }
-    }
-
-    body.light-theme {
-      --bg-color: #ffffff;
-      --text-color: #000000;
-      --gray: #4b5563;
-    }
-
-    body.dark-theme {
-      --bg-color: #0b0c10;
-      --text-color: #ffffff;
-      --gray: #9ca3af;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Fira Code', monospace;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      align-items: center;
-      justify-content: center;
-      padding: clamp(1rem, 4vw, 2rem);
-      transition: background-color 0.3s ease, color 0.3s ease;
-      overflow-x: hidden;
-    }
-
-    .container {
-      width: 100%;
-      max-width: 500px;
-      text-align: center;
-      animation: fadeIn 0.8s ease-in-out;
-      transition: transform 0.2s ease-in-out;
-      padding-inline: 1rem;
-    }
-
-    .container:hover {
-      transform: scale(1.01);
-    }
-
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    h1 {
-      font-size: clamp(1.75rem, 5vw, 2.5rem);
-      color: var(--red);
-      margin-bottom: 0.5rem;
-      background: linear-gradient(90deg, var(--red), var(--accent));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: shine 3s linear infinite;
-    }
-
-    @keyframes shine {
-      0% { background-position: -200%; }
-      100% { background-position: 200%; }
-    }
-
-    p.tagline {
-      font-size: clamp(1rem, 3.5vw, 1.2rem);
-      color: var(--gray);
-      margin-bottom: 2rem;
-    }
-
-    .link-button {
-      display: block;
-      background-color: var(--red);
-      color: white;
-      padding: 1rem;
-      margin: 0.75rem 0;
-      border: none;
-      border-radius: var(--radius);
-      font-size: 1rem;
-      text-decoration: none;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.3s ease;
-    }
-
-    .link-button:hover {
-      background-color: var(--red-hover);
-      transform: scale(1.04);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    }
-
-    .footer {
-      margin-top: 2rem;
-      font-size: 0.85rem;
-      color: var(--gray);
-      animation: fadeIn 1.2s ease-in-out;
-    }
-
-    #theme-toggle {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      background: none;
-      border: none;
-      cursor: pointer;
-      color: var(--gray);
-      z-index: 1000;
-      padding: 0.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    #theme-toggle svg {
-      width: 24px;
-      height: 24px;
-    }
-
-    a {
-      color: var(--accent);
-      text-decoration: underline;
-      text-underline-position: under;
-      transition: text-decoration-style 0.2s ease;
-    }
-
-    a:hover,
-    a:focus {
-      text-decoration-style: wavy;
-    }
-
-    #faq-modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-      z-index: 9999;
-      align-items: center;
-      justify-content: center;
-      padding: 1rem;
-    }
-
-    #faq-modal .content {
-      background: var(--bg-color);
-      color: var(--text-color);
-      max-width: 600px;
-      width: 100%;
-      padding: 1.5rem;
-      border-radius: var(--radius);
-      overflow-y: auto;
-      max-height: 90vh;
-      position: relative;
-    }
-
-    .faq-close-btn {
-      display: block;
-      background-color: var(--red);
-      color: white;
-      padding: 1rem;
-      margin: 1rem 0 0 0;
-      border: none;
-      border-radius: var(--radius);
-      font-size: 1rem;
-      text-decoration: none;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.3s ease;
-      font-family: inherit;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    .faq-close-btn:hover {
-      background-color: var(--red-hover);
-      transform: scale(1.04);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    }
-
-    .faq-close-btn:active {
-      transform: scale(0.98);
-    }
-
-    @media (max-width: 480px) {
-      .link-button {
-        font-size: 0.95rem;
-        padding: 0.85rem;
-      }
-
-      #theme-toggle {
-        top: 8px;
-        right: 8px;
-      }
-
-      .faq-close-btn {
-        font-size: 0.95rem;
-      }
-
-      a[href*="flag-orpheus-top.svg"] img {
-        width: 180px !important;
-        top: 5px !important;
-      }
-    }
-
-    #flag-link {
-      position: absolute;
-      top: 0;
-      left: 10px;
-      z-index: 999;
-    }
-
-    #flag-link img {
-      width: 220px;
-      max-width: 90vw;
-      height: auto;
-      border: 0;
-    }
-
-    /* Default: float top-left (for desktops) */
-    #flag-link {
-      position: absolute;
-      top: 0;
-      left: 10px;
-      z-index: 999;
-    }
-
-    #flag-link img {
-      width: 220px;
-      max-width: 90vw;
-      height: auto;
-      border: 0;
-    }
-
-    /* Mobile and Tablet: show inline above content */
-    @media (max-width: 900px) {
-    #flag-link {
-      position: relative;
-      display: block;
-      margin-bottom: 1.25rem;
-      top: auto;
-      left: auto;
-      text-align: center;
-    }
-
-    #flag-link img {
-      width: 160px;
-      margin: 0 auto;
-    }
-    }
-  </style>
+  <!-- Styles -->
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -308,7 +34,6 @@
   <a href="https://hackclub.com/" target="_blank" id="flag-link">
     <img src="https://assets.hackclub.com/flag-orpheus-top.svg" alt="Hack Club logo" />
   </a>
-
 
   <div class="container">
     <h1>Hack Club @ Binus School Semarang</h1>
@@ -362,70 +87,6 @@
   </div>
 
   <!-- JavaScript -->
-  <script>
-    // THEME TOGGLE
-    const themeToggle = document.getElementById('theme-toggle');
-    const themeIcon = document.getElementById('theme-icon');
-
-    const sunIcon = '<circle cx="12" cy="12" r="5"/><g stroke="currentColor" stroke-linecap="round" stroke-width="2"><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></g>';
-    const moonIcon = '<path d="M21 12.79A9 9 0 1111.21 3a7 7 0 009.79 9.79z"/>';
-
-    function setIcon(isDark) {
-      themeIcon.innerHTML = isDark ? sunIcon : moonIcon;
-    }
-
-    const userPref = localStorage.getItem('theme');
-    const systemPrefDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    const isStoredDark = userPref === 'dark' || (!userPref && systemPrefDark);
-    document.body.classList.add(isStoredDark ? 'dark-theme' : 'light-theme');
-    setIcon(isStoredDark);
-
-    themeToggle.addEventListener('click', () => {
-      const isDark = document.body.classList.contains('dark-theme');
-      document.body.classList.toggle('dark-theme', !isDark);
-      document.body.classList.toggle('light-theme', isDark);
-      localStorage.setItem('theme', isDark ? 'light' : 'dark');
-      setIcon(!isDark);
-    });
-
-    // FAQ MODAL
-    const faqButton = document.getElementById('faq-button');
-    const faqModal = document.getElementById('faq-modal');
-    faqButton.addEventListener('click', (e) => {
-      e.preventDefault();
-      faqModal.style.display = 'flex';
-    });
-    function closeFAQ() {
-      faqModal.style.display = 'none';
-    }
-    faqModal.addEventListener('click', function (e) {
-      if (e.target === faqModal) closeFAQ();
-    });
-
-    // LINK ASSIGNMENTS
-    const links = {
-      register: "https://forms.gle/YEDzSUoqXq4NubB86",
-      SOM: "https://summer.hack.club/cn0",
-      Athena: "https://athena.hack.club/cn0",
-      HackClub: "https://hackclub.com",
-      Instagram: "https://instagram.com/hackclub.bss",
-      email: "mailto:hackclub.bss+general@gmail.com?subject=Hack%20Club%20Inquiry&body=Hi%20Hack%20Club%20Organizers%2C%0D%0A%0D%0AI%27m%20interested%20in%20joining%20Hack%20Club%20or%20learning%20more%20about%20it.%20Could%20you%20please%20share%20more%20information%3F%0D%0A%0D%0AThank%20you%21",
-      email_Brilliant: "mailto:hackclub.bss+brilliant@gmail.com?subject=Brilliant%20Premium%20Access%20Request&body=Hi%20Hack%20Club%20Organizers%2C%0D%0A%0D%0AI%20would%20like%20to%20request%20access%20to%20Brilliant%20Premium.%20Here%20are%20my%20details%3A%0D%0A%0D%0AName%3A%20%0D%0ASchool%20Email%3A%20%0D%0AReason%20for%20Request%3A%20%0D%0A%0D%0AThanks!",
-      COC: "https://hackclub.com/conduct"
-    };
-
-    document.querySelectorAll('[data-link]').forEach(el => {
-      const key = el.getAttribute('data-link');
-      const url = links[key];
-
-      if (url) {
-        el.setAttribute('href', url);
-        if (url.startsWith('http') || url.startsWith('mailto')) {
-          el.setAttribute('target', '_blank');
-          el.setAttribute('rel', 'noopener noreferrer');
-        }
-      }
-    });
-  </script>
+  <script src="./script.js"></script>
 </body>
 </html>
