--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -77,8 +77,9 @@
     </div>
   </div>
 
-  <script src="./script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
