--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
@@ -80,6 +80,7 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
 
