--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <a data-link="email_Brilliant" class="link-button">Get Brilliant premium for free!</a>
     <a data-link="email" class="link-button">Contact on Email</a>
     <a href="#" class="link-button" style="opacity: 0.6; pointer-events: none;">Meeting Info – To be announced soon</a>
+    <a href="#" class="link-button" id="team-button">Our Team</a>
     <a href="#" class="link-button" id="faq-button">FAQ – About Our Club</a>
     <a data-link="COC" class="link-button">Code of Conduct</a>
 
@@ -77,10 +78,31 @@
     </div>
   </div>
 
+  <div id="team-modal">
+    <div class="content">
+      <h2>Our Team</h2>
+
+      <div class="team-grid">
+        <div class="team-card">
+          <h3>Co-Founder & President</h3>
+          <p class="name"><a href="https://rainier-ps.github.io/Personal-Website/">Rainier Pearson Saputra</a></p>
+        </div>
+
+        <div class="team-card">
+          <h3>Co-Leader</h3>
+          <p class="name">Kenan</p>
+        </div>
+        
+        <div class="team-card">
+          <h3> Supervisor</h3>
+          <p class="name">Mr. Aan</p>
+        </div>
+      </div>
+
+      <button onclick="closeTeam()" class="faq-close-btn">Close</button>
+    </div>
+  </div>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
-
-
-
-
