Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="keywords" content="Hack Club, Binus School Semarang, coding club, student tech club, programming, makerspace, STEM, innovation, Indonesia, student leadership, hack club">
   <meta name="author" content="Rainier Pearson Saputra">
 
+  <meta name="google-site-verification" content="KclOAJlsOojPDo-nzZw4U5gCyo-2dL3ZP09HrbI7NYk" />
+
   <link rel="icon" href="https://assets.hackclub.com/icon-rounded.svg" type="image/svg+xml">
   <meta name="theme-color" content="#ec3750">
 
@@ -111,3 +113,4 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
+
