--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="title" content="Hack Club @ Binus School Semarang">
   <meta name="description" content="Hack Club @ Binus School Semarang is a student-led coding and innovation club where makers build, learn, and connect.">
-  <meta name="keywords" content="Hack Club, Binus School Semarang, coding club, student tech club, programming, makerspace, STEM, innovation, Indonesia, student leadership, hack club">
+  <meta name="keywords" content="Hack Club, Binus School Semarang, coding club, student tech club, programming, engineering, makerspace, STEM, innovation, Indonesia, student leadership, hack club">
   <meta name="author" content="Rainier Pearson Saputra">
 
   <meta name="google-site-verification" content="KclOAJlsOojPDo-nzZw4U5gCyo-2dL3ZP09HrbI7NYk" />
@@ -113,4 +113,3 @@
   <script src="./js/script.js"></script>
 </body>
 </html>
-
